suppression des h# et p

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -6,10 +6,9 @@
 </head>
 <body>
     <style>
-        html, body, div,
-        h1, h2, h3, h4, h5, h6, p, span,
+        html, body,
         table, thead, tbody, tr, th, td,
-        ul, ol, li, a, img {
+        a, img {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -102,7 +101,7 @@
             <table class="container" cellpadding="0" cellspacing="0" width="100%" style="max-width: 700px; text-align: center">
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0; font-weight: bold">
                             <tr>
                                 <td style="font-size: 20px; line-height: 4">!! PLACES LIMITÉES !!</td>
                             </tr>
@@ -123,11 +122,13 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                        <p>1er étage</p>
-                                        <p>Bâtiment MIW</p>
-                                        <p>15/12/2019 à 20h</p>
-                                    </td>
+                                    <td>1er étage</td>
+                                </tr>
+                                <tr>
+                                    <td>Bâtiment MIW</td>
+                                </tr>
+                                <tr>
+                                    <td>15/12/2019 à 20h</td>
                                 </tr>
                             </table><!--
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
@@ -137,9 +138,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                        <p>RnB, Hip Hop, Latino, House, Electro</p>
-                                    </td>
+                                    <td>RnB, Hip Hop, Latino, House, Electro</td>
                                 </tr>
                             </table><!--
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
@@ -149,10 +148,10 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                        <p>15€ + 1 conso</p>
-                                        <p><small>(sur présentation de cet email)</small></p>
-                                    </td>
+                                    <td>15€ + 1 conso</td>
+                                </tr>
+                                <tr>
+                                    <td><small>(sur présentation de cet email)</small></td>
                                 </tr>
                             </table><!--
                         --></td>
@@ -164,8 +163,8 @@
                     <td>
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
                             <tr>
-                                <td>
-                                    <h2 style="font-size: 30px;">La meilleure soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !</h2>
+                                <td style="font-size: 30px; font-weight: bold">
+                                    La meilleure soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !
                                 </td>
                             </tr>
                         </table>
@@ -183,10 +182,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                            <h4>Miss Edge</h4>
-                                            <p>A besoin de beaucoup d’attention !</p>
-                                        </td>
+                                        <td><b>Miss Edge</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td>A besoin de beaucoup d’attention !</td>
                                     </tr>
                                 </table><!--
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
@@ -196,10 +195,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                            <h4>Miss Firefox</h4>
-                                            <p>Libre et sauvage, tel un renard !</p>
-                                        </td>
+                                        <td><b>Miss Firefox</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Libre et sauvage, tel un renard !</td>
                                     </tr>
                                 </table><!--
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
@@ -209,10 +208,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                            <h4>Miss Opera</h4>
-                                            <p>La norvégienne discrète et astucieuse !</p>
-                                        </td>
+                                        <td><b>Miss Opera</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td>La norvégienne discrète et astucieuse !</td>
                                     </tr>
                                 </table><!--
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
@@ -222,10 +221,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                            <h4>Miss Safari</h4>
-                                            <p>Ne perd pas le Nord !</p>
-                                        </td>
+                                        <td><b>Miss Safari</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ne perd pas le Nord !</td>
                                     </tr>
                                 </table><!--
                             --></td>
