--- a/email/email_party.html
+++ b/email/email_party.html
@@ -237,7 +237,7 @@
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0">
                             <tr align="center">
                                 <td>
-                                    <a class="bouton" href="#">Inscription sur @miw05</a>
+                                    <a class="bouton" href="http://yohansalamone.com">Inscription sur @miw05</a>
                                 </td>
                             </tr>
                         </table>
@@ -251,13 +251,13 @@
             <table cellpadding="0" cellspacing="0" width="192px" style="padding: 20px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td width="64">
-                        <a href="#"><img width="32" height="32" src="../img/facebook.png" alt="Facebook"/></a>
+                        <a href="http://yohansalamone.com"><img width="32" height="32" src="../img/facebook.png" alt="Facebook"/></a>
                     </td>
                     <td width=64>
-                        <a href="#"><img width="32" height="32" src="../img/twitter.png" alt="Twitter"/></a>
+                        <a href="http://yohansalamone.com"><img width="32" height="32" src="../img/twitter.png" alt="Twitter"/></a>
                     </td>
                     <td width="64">
-                        <a href="#"><img width="32" height="32" src="../img/instagram.png" alt="Instagram"/></a>
+                        <a href="http://yohansalamone.com"><img width="32" height="32" src="../img/instagram.png" alt="Instagram"/></a>
                     </td>
                 </tr>
             </table>
@@ -269,12 +269,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="#">miw@miw.com</a> | 06 07 08 09 10
+                        <a href="http://yohansalamone.com">miw@miw.com</a> | 06 07 08 09 10
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Si vous ne souhaitez plus recevoir d'e-mails de notre part, vous pouvez <a href="#">vous désabonner</a>.
+                        Si vous ne souhaitez plus recevoir d'e-mails de notre part, vous pouvez <a href="http://yohansalamone.com">vous désabonner</a>.
                     </td>
                 </tr>
             </table>
