--- a/email/email_party.html
+++ b/email/email_party.html
@@ -82,7 +82,7 @@
                 <tr height="200">
                 </tr>
                 <tr height="150" >
-                    <td style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</td>
+                    <td valign="bottom" style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</td>
                 </tr>
                 <tr height="1">
                     <td style="font-size: 30px;">Jeu. 19 déc. à GAP</td>
