ajout propriétés css en inline

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -19,11 +19,6 @@
         }
         .header {
             height: 400px;
-            background-color: #131e58;
-            background-image: url("../img/background_opt.jpg");
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
         }
         .container {
             padding: 16px;
@@ -31,27 +26,11 @@
         .tuileInfo {
             width: 190px;
             padding: 35px 0;
-            text-align: center;
             font-size: 20px;
         }
         .tuileMiss {
             width: 290px;
             padding: 35px 0;
-            text-align: center;
-            font-size: 20px;
-        }
-        a {
-            color: inherit;
-        }
-        .bouton {
-            display: inline-block;
-            line-height: 3;
-            color: #fff;
-            background-color: #C30078;
-            text-decoration: none;
-            width: 100%;
-            border-radius: 10px;
-            font-weight: bold;
             font-size: 20px;
         }
         @media screen and (min-width: 768px) {
@@ -75,9 +54,11 @@
         }
     </style>
 
-<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
+<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif; color: #354052; background: #fff;">
     <tr>
-        <td class="header" align="center">
+        <td align="center"
+            class="header"
+            style="background-color: #131e58; background-image: url('../img/background_opt.jpg');  background-repeat: no-repeat;  background-position: center;  background-size: cover;">
             <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #fff; background-color: initial; text-align: right">
                 <tr height="200">
                 </tr>
@@ -85,7 +66,7 @@
                     <td valign="bottom" style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</td>
                 </tr>
                 <tr height="1">
-                    <td style="font-size: 30px;">Jeu. 19 déc. à GAP</td>
+                    <td style="font-size: 30px;">Jeu. 17 déc. à GAP</td>
                 </tr>
                 <tr>
                 </tr>
@@ -111,7 +92,7 @@
                     <td><table cellpadding="0" cellspacing="0" width="100%">
                         <tr align="center">
                             <td><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/map.png" alt="Lieu, date et heure de la soirée"/>
@@ -124,10 +105,10 @@
                                     <td>Bâtiment MIW</td>
                                 </tr>
                                 <tr>
-                                    <td>15/12/2019 à 20h</td>
+                                    <td>17/12/2020 à 20h</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/play.png" alt="Styles de musique joués"/>
@@ -137,7 +118,7 @@
                                     <td>RnB, Hip Hop, Latino, House, Electro</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/euro.png" alt="Prix de l'entrée"/>
@@ -171,7 +152,7 @@
                         <table cellpadding="0" cellspacing="0" width="100%">
                             <tr align="center">
                                 <td><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
@@ -184,7 +165,7 @@
                                         <td>A besoin de beaucoup d’attention !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
@@ -197,7 +178,7 @@
                                         <td>Libre et sauvage, tel un renard !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
@@ -210,7 +191,7 @@
                                         <td>La norvégienne discrète et astucieuse !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
@@ -233,7 +214,10 @@
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0">
                             <tr align="center">
                                 <td>
-                                    <a class="bouton" href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">Inscription sur @miw05</a>
+                                    <a style=" display: inline-block; line-height: 3; color: #fff; background-color: #C30078; text-decoration: none; width: 100%; border-radius: 10px; font-weight: bold; font-size: 20px;"
+                                       href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">
+                                        Inscription sur @miw05
+                                    </a>
                                 </td>
                             </tr>
                         </table>
@@ -265,12 +249,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">miw@miw.com</a> | 06 07 08 09 10
+                        <a style="color: inherit" href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">miw@miw.com</a> | 06 07 08 09 10
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Si vous ne souhaitez plus recevoir d'e-mails de notre part, vous pouvez <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">vous désabonner</a>.
+                        Si vous ne souhaitez plus recevoir d'e-mails de notre part, vous pouvez <a style="color: inherit" href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">vous désabonner</a>.
                     </td>
                 </tr>
             </table>
