toutes les propriétés css en inline (hors responsive) pour compatibilité gmail

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -13,10 +13,6 @@
             padding: 0;
             box-sizing: border-box;
         }
-        table {
-            color: #354052;
-            background: #fff;
-        }
         .header {
             height: 400px;
         }
@@ -25,13 +21,9 @@
         }
         .tuileInfo {
             width: 190px;
-            padding: 35px 0;
-            font-size: 20px;
         }
         .tuileMiss {
             width: 290px;
-            padding: 35px 0;
-            font-size: 20px;
         }
         @media screen and (min-width: 768px) {
             .header {
@@ -54,7 +46,7 @@
         }
     </style>
 
-<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif; color: #354052; background: #fff;">
+<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
         <td align="center"
             class="header"
@@ -75,7 +67,7 @@
     </tr>
     <tr>
         <td align="center">
-            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="max-width: 700px; text-align: center">
+            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="color: #354052; background: #fff; max-width: 700px; text-align: center">
                 <tr>
                     <td>
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0; font-weight: bold">
@@ -92,7 +84,7 @@
                     <td><table cellpadding="0" cellspacing="0" width="100%">
                         <tr align="center">
                             <td><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/map.png" alt="Lieu, date et heure de la soirée"/>
@@ -108,7 +100,7 @@
                                     <td>17/12/2020 à 20h</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/play.png" alt="Styles de musique joués"/>
@@ -118,7 +110,7 @@
                                     <td>RnB, Hip Hop, Latino, House, Electro</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="../img/euro.png" alt="Prix de l'entrée"/>
@@ -152,7 +144,7 @@
                         <table cellpadding="0" cellspacing="0" width="100%">
                             <tr align="center">
                                 <td><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
@@ -165,7 +157,7 @@
                                         <td>A besoin de beaucoup d’attention !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
@@ -178,7 +170,7 @@
                                         <td>Libre et sauvage, tel un renard !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
@@ -191,7 +183,7 @@
                                         <td>La norvégienne discrète et astucieuse !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="../img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
@@ -241,7 +233,7 @@
                     </td>
                 </tr>
             </table>
-            <table cellpadding="0" cellspacing="0" width="100%" style="line-height: 2; background-color: #F5F5F5; text-align: center">
+            <table cellpadding="0" cellspacing="0" width="100%" style="line-height: 2; background-color: #F5F5F5; color: #354052; text-align: center">
                 <tr>
                     <td>
                         Copyright © 2020 <b>MIW’x</b>. All Rights Reserved.
