correction src img

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -87,7 +87,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <img width="42" height="42" src="../img/map.png" alt="Lieu, date et heure de la soirée"/>
+                                        <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/map.png" alt="Lieu, date et heure de la soirée"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -103,7 +103,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <img width="42" height="42" src="../img/play.png" alt="Styles de musique joués"/>
+                                        <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/play.png" alt="Styles de musique joués"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -113,7 +113,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <img width="42" height="42" src="../img/euro.png" alt="Prix de l'entrée"/>
+                                        <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/euro.png" alt="Prix de l'entrée"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -147,7 +147,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
+                                            <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -160,7 +160,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
+                                            <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -173,7 +173,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
+                                            <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -186,7 +186,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
+                                            <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -223,13 +223,13 @@
             <table cellpadding="0" cellspacing="0" width="192px" style="padding: 20px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td width="64">
-                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="../img/facebook.png" alt="Facebook"/></a>
+                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/facebook.png" alt="Facebook"/></a>
                     </td>
                     <td width=64>
-                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="../img/twitter.png" alt="Twitter"/></a>
+                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/twitter.png" alt="Twitter"/></a>
                     </td>
                     <td width="64">
-                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="../img/instagram.png" alt="Instagram"/></a>
+                        <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing"><img width="32" height="32" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/instagram.png" alt="Instagram"/></a>
                     </td>
                 </tr>
             </table>
