--- a/email/email_party.html
+++ b/email/email_party.html
@@ -50,7 +50,7 @@
     <tr>
         <td align="center"
             class="header"
-            style="background-color: #131e58; background-image: url('../img/background_opt.jpg');  background-repeat: no-repeat;  background-position: center;  background-size: cover;">
+            style="background-color: #131e58; background-image: url('http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/background_opt.jpg');  background-repeat: no-repeat;  background-position: center;  background-size: cover;">
             <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #fff; background-color: initial; text-align: right">
                 <tr height="200">
                 </tr>
