couleurs hexa en 6 caractères

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -51,7 +51,7 @@
         <td align="center"
             class="header"
             style="background-color: #131e58; background-image: url('http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/background_opt.jpg');  background-repeat: no-repeat;  background-position: center;  background-size: cover;">
-            <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #fff; background-color: initial; text-align: right">
+            <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #ffffff; background-color: initial; text-align: right">
                 <tr height="200">
                 </tr>
                 <tr height="150" >
@@ -67,7 +67,7 @@
     </tr>
     <tr>
         <td align="center">
-            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="color: #354052; background: #fff; max-width: 700px; text-align: center">
+            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="color: #354052; background: #ffffff; max-width: 700px; text-align: center">
                 <tr>
                     <td>
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0; font-weight: bold">
@@ -206,7 +206,7 @@
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0">
                             <tr align="center">
                                 <td>
-                                    <a style=" display: inline-block; line-height: 3; color: #fff; background-color: #C30078; text-decoration: none; width: 100%; border-radius: 10px; font-weight: bold; font-size: 20px;"
+                                    <a style=" display: inline-block; line-height: 3; color: #ffffff; background-color: #C30078; text-decoration: none; width: 100%; border-radius: 10px; font-weight: bold; font-size: 20px;"
                                        href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing">
                                         Inscription sur @miw05
                                     </a>
