--- a/email/email_party.html
+++ b/email/email_party.html
@@ -49,6 +49,16 @@
 <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
         <td align="center"
+            style="padding: 15px 0; background-color: #131e58; color: #ffffff">
+            Cet e-mail ne s'affiche pas correctement ?
+            <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/email/email_party.html"
+               style="color: #ffffff">
+                Cliquez ici pour afficher la version web
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td align="center"
             class="header"
             style="background-color: #131e58; background-image: url('http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/background_opt.jpg');  background-repeat: no-repeat;  background-position: center;  background-size: cover;">
             <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #ffffff; background-color: initial; text-align: right">
